--- a/index.html
+++ b/index.html
@@ -4,10 +4,113 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet"href="style.css">
-    <title>Document</title>
+    <title>Hadj Abdelkader Samir</title>
 </head>
 <body>
+    <header>
+         <a href="#" class="logo">Samir</a>
+         <nav class="navigation">
+         <a href="#services">Services</a>
+         <a href="#projects">Projects</a>
+         <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <section class="main">
+        <div>
+            <h2>Hello, I'm Samir<br><span>Software Developer</span></h2>
+            <h3>Now I Build Android Applications</h3>
+            <a href="#projects" class="main-btn">View my work</a>
+            <div class="social-icons">
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+
+            </div>
+        </div>
+
+    </section>
+
+    <section class="cards" id="services">
+        <h2 class="title">Services</h2>
+        <div class="content">
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-brands fa-android"></i>
+                </div>
+                <div class="info">
+                    <h3>Android Development</h3>
+                    <p>Android applications Development Using Kotlin</p>
+                </div>
+            </div>
+        </div>
+
+    </section>
+ 
+    <section class="projects" id="projects">
+        <h2 class="title">Projects</h2>
+        <div class="content">
+           <div class="project-card">
+             <div class="project-image">
+                <img src="images/find_my_age.jpg" />
+             </div>
+             <div class="project-info">
+                <p class="project-category">Find age using birth year</p>
+                <strong class="project-title">
+                    <span>Find My Age</span>
+                    <a href="https://github.com/samisoftw/Find-My-Age" class="more-details">More details</a>
+                </strong>
+             </div>
+           </div> 
+           <div class="project-card">
+            <div class="project-image">
+               <img src="images/Tic tac toe.jpg" />
+            </div>
+            <div class="project-info">
+               <p class="project-category">Tic tac toe Game</p>
+               <strong class="project-title">
+                   <span>Tic tac toe Game</span>
+                   <a href="https://github.com/samisoftw/TicTacToeDevice" class="more-details">More details</a>
+               </strong>
+            </div>
+          </div> 
+        </div>
+    </section>
+
+    <section class="cards contact" id="contact">
+      <h2 class="title">Let's work together</h2>
+      <div class="content">
+        <div class="card">
+            <div class="icon">
+                <i class="fas fa-envelope"></i>
+            </div>
+            <div class="info">
+                <h3>Email</h3>
+                <p>hadjsoft@gmail.com</p>
+            </div>
+        </div>
     
-</body>
+    <div class="card">
+            <div class="icon">
+                <i class="fas fa-phone"></i>
+            </div>
+            <div class="info">
+                <h3>phone</h3>
+                <p></p>
+            </div>
+        </div>
+    </div>
+    </section>
+    <footer class="footer">
+        <p class="footer-title">Copyrights @ <span>Hadj Abdelkader Samir</span></p>
+        <div class="social-icons">
+            <a href="#"><i class="fa-brands fa-github"></i></a>
+            <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="#"><i class="fa-brands fa-youtube"></i></a>
+
+        </div>
+    </footer>
+</body> 
 </html>
